Bug 1799439: Don't reject in GetIceStats. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D161828